# toolbox

./: .gitignore  COMMANDLINEFU.COM.md  LICENSE.md  README.md
_bashrc_helpers/: .bashrc  .bashrc_helpers  .bashrc_kubernetes  README.md
bigdata/Basic-Thrift-Tutorial/: .gitignore  client.cpp
bigdata/docker/: remove-container  run-default
bigdata/docker-javabuildchain/: Dockerfile  README.md  build-without-image.bash  build.bash
bigdata/docker-multi-container-build/: build_container.bash
bigdata/protobuf/: checks
bigdata/rtsp/: rtsp.play
bigdata/spark/: README.md
blob/: bytearray.blob  bytearray.slob  p4.7z
c/: .x
c/00-keywords/: Makefile  app.c
c/01-noStdio/: Makefile  app.c
c/02-fork/: Makefile  app.c
c/03-inputPrint/: app.c
c/04-strChrInt/: Makefile  app.c  app.dbg
c/06-charFunction/: app.c
c/07-arrayFunctions/: Makefile  app.c
c/08-structures/: app.c
c/10-pointers/: README  app.c
c/11-pointersOffsetting/: app.c
c/12-pointerArithmetics/: Makefile  pointers.c
c/20-malloc/: Makefile  prg.c
c/51-calculatingPi/: Makefile  picalc.c
c/52-korn/: Makefile  korn.c
c/53-mirror/: Makefile  mirror.c
c/54-defineTricks/: Makefile  fnvargs.c
c/55-writeFile/: Makefile  wfile.c
c/56-libraries/: Makefile  client.c  librap.c  librap.h
c/57-librariesShared/: Makefile  librap.c  librap.h  main.c
c/58-rot13/: rot13.c
cassandra/: README.md  check.cass.py  pom.xml
chuck/: chuck01.ck  chuck02.ck  chuck03.ck  chuck04-curly.ck  chuck04-larry.ck  chuck04-moe.ck  chuck05-arrays.ck  curly.ck  larry.ck  moe.ck
cmake/: README  README.md
cmake/cppTemplate/test/: CMakeLists.txt  test1.cpp
cmake/fullTemplate/lib/factorial/: CMakeLists.txt
cobol/: AXP.cob  init.cob  modelo.cob
cpp/: .gitignore  .x  README  README.md  ccc  clean  language_rules  libraries.list  listall
cpp/13-zmq_PubCStdin-Subjava/: .gitignore  .k  .x  CMakeLists.txt  MANIFEST.MF  Subscriber.java  publisher.cpp  subscriber.cpp
cpp/28-ctypesPython/: .k  .x  CMakeLists.txt  Makefile  README  app.py  foo.cpp  hello.cpp
cpp/32-cpp-internals/: .gitignore  .x  CMakeLists.txt  app.cpp
cpp/35-flexbison/: .x  CMakeLists.txt  CMakeLists.txt.new  app.cpp  fcalc.l  parser.y  tokens.l
cpp/38-glade3/: CMakeLists.txt  app.cpp
cpp/38-glade3-gtkmm/: .x  CMakeLists.txt  app.cpp  app.ui  gui.glade  simpler.cpp
cpp/49-blockingQueue/: .x  CMakeLists.txt  app.cpp  blocking_queue.h  blocking_queue_test.cpp
cpp/59-eigensfml/: CMakeLists.txt  app.cpp
cpp/cppTemplate/: CMakeLists.txt  README.md
cpp/cppTemplate/lib/factorial/include/: factorial.h
cpp/cppTemplate/src/: CMakeLists.txt
cpp/cppTemplate/src/include/: solid.h
csvtranspose/: .x  csvtranspose.py  grades2socsec.json
docker/: README.md
docker/dockertfcpp/tf/od/: .gitignore  CMakeLists.txt  app.cpp
expect/: axsplan  debian1  debian2  debian2.pre  e2  e3  e4  e5  e6  e7  e8  e9
flex-bison/: .gitignore
glade3/: dialog.builder  dialog.c  dialog.url  gtkmodel.c  gtkmodel.glade  oldgtkmodel.c
java/: Annotations.java  CGTemplate.java  Collections_Arrays.java  Factory.java  Generics.java  Getenv.java  GroovyAnalyzer.java  HashMaps.java  HelloWorld.java  HelloWorldSwing.java  Interfaces.java  Interfaces2.java  InterfacesInterface.java  JavaCompiler.java  Jface.java  Jframe.java  JobsHelloWorld.java  ListIterator.java  Listeners.java  Reflection.java  SetAccessible.java  emfObjectsExample.java  emfObjectsExampleUsage2.java
java/jni/: .gitignore  .x  CMakeLists.txt  DONOTREADME.md  HelloJNI.java  HelloJNIImpl.cpp  HelloJNIImpl.h  README.md  build
kafka/: CMakeLists.txt
kafka/kafkacat/: consume-manualassign  metadata  produce.tstamp  showconfig
keycloak/: README.md
ktechlab/: 8SegDisplay.circuit  Capacitor.circuit  Inductor.circuit
lacppp/: ._  .gitignore  .k  .x
latex/: .gitignore  .x  MAIN.tex  README  build  force.eps  geometry.eps
lex_yacc/: Makefile  e1.data  e1.lex  e2.data  e2.lex  e3.data  e3.lex  e4.data  e4.lex  e5.lex  e6.data  e6.h  e6.lex  e6.yacc  e7.c  e7.data  e7.h  e7.lex  e7.output  e7.yy.c  ex1.l  lexyy.c  pointers.c  separators  y.tab.c  y.tab.h
lexyacc/: .gitignore
logo/: PSEUDOSQUARES  TREE
mustache/: song.html  song.mst
opencv/calib/: .gitignore  .x  CMakeLists.txt  README  README.md  calib.cpp  test_calib.cpp  test_dist.cpp
opengl/: Makefile
openssl-encrypt-file/: .gitignore  .x  decrypt  decrypt.with.file  encrypt  encrypt.with.file  file.txt  generate
perl/: arrays.pl  chop_chomp.pl  comparison_operators.pl  ex01.pl  faktorielle.pl  file.pl  for.pl  foreach.pl  hash_arrays.pl  if_else.pl  objects.pl  oop.pl  perl_functions.txt  perl_regex_expressions.txt  prog1.pl  prog2.pl  prog4.pl  prog5.pl  prog6.pl  reversa.pl  scalar_operations.pl  subroutines.pl  test.pl  until.pl  while.pl
perl-glade/: example-1.glade  example-1.pl
processing/: preferences.txt  sync
protobuf/: kafkacat.doc
python/: aacircle.py  camera.py  carsx2.py  main.py  mipong.py  monkey.py  simple_graph.py  sprites.py
python-forms/: .x  data.yaml  forms.py  mainform.py  model.py  npyscreen.py  optlist.py
python-glade/: HelloWorld.glade  main.py
python-tinydb/: .x  db.py
r/: R  basics.R  btceur.R
rtsp/: rtsp
spark/: notes-spark-shell
tcl/: lesson0.tcl  lesson1.tcl  lesson10.tcl  lesson11.tcl  lesson2.tcl  lesson3.tcl  lesson4.tcl  lesson5.tcl  lesson6.tcl  lesson7.tcl  lesson8.tcl  lesson9.tcl  tcl
testbench/: .gitignore  .x  README.md  config.py  data.yaml  edit_test_campaign.py  edit_test_case.py  main.bash  main_menu.bash  menu_editor.py  menu_form.py  run_campaign.bash  run_test.bash  test_case_editor.py
thrift/: README.md  server.cpp
toy-compiler/: Makefile  README  codegen.h  node.h  parser.cpp  parser.hpp  tokens.cpp
vala/: Makefile  basicsample.vala  basicsamplei.vala  clipboard.vala  createdialog.vala  curses.vala  filedialog.vala  multipad.vala  sync.vala  textvwr.vala  treelist.vala  treeview.vala  treeview2.vala  xmlsample.vala
websockets/: client.bash  consumer.html  producer  server.bash  server.py  websocket_server.py
zookeeper/: .project  pom.xml
(+858 files in other folders)
